(issue #26) continued working on grouping choices -added margin rule to css to increase spacing -created function to handle creation of wrapper element

--- a/css/general.css
+++ b/css/general.css
@@ -103,6 +103,7 @@ td {
     border: solid thin gainsboro;
     border-radius: 0.2rem;
     padding: 0.2rem;
+    margin: 0.3rem;
 }
 
 .choice-prompt {
